[gd_scene load_steps=4 format=3 uid="uid://ocnc86sdjvvv"]

[ext_resource type="Script" path="res://scripts/layout_display.gd" id="1_auwf0"]
[ext_resource type="PackedScene" uid="uid://dscphoch3nqjy" path="res://scene/tilemaplayers/room_layout.tscn" id="2_h35ux"]
[ext_resource type="PackedScene" uid="uid://bpuvuqcdvabib" path="res://scene/tilemaplayers/room_content.tscn" id="3_6sox8"]

[node name="LayoutDisplay" type="Node2D"]
script = ExtResource("1_auwf0")

[node name="RoomLayout" parent="." instance=ExtResource("2_h35ux")]

[node name="RoomLayoutContainer" type="Node2D" parent="."]

[node name="RoomContent" parent="." instance=ExtResource("3_6sox8")]

[node name="RoomContentContainer" type="Node2D" parent="."]
